revo las fechas mierdas utas

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -20,5 +20,8 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 
        
-    
+    <script>
+      edit_fecha_format();
+   
+        </script>
 </html>
