--- a/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadocapacitacion/empleadocapacitacionform.html
@@ -52,6 +52,9 @@
         </div>
     </div>
  </body>
+    <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>
 <script>
     $(document).ready(function () {
     $('#fechaingreso').datepicker({
