--- a/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
@@ -58,6 +58,9 @@
             </div>
         </div>
     </div>
+       <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>
  </body>
 <script>
     $(document).ready(function () {
