--- a/src/main/resources/templates/fragments/estado/estadoform.html
+++ b/src/main/resources/templates/fragments/estado/estadoform.html
@@ -71,7 +71,9 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
         </div>
     </div>
    
-
+   <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>
 </body>
 <script th:inline="javascript">
     Textheader('pnt_cstd',document.title);
