--- a/src/main/resources/templates/fragments/usuario/usuarioform.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioform.html
@@ -113,6 +113,9 @@
             </div>
         </div>
     </div>
+       <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>
 </body>
 <script th:inline="javascript">
     Textheader('pnt_geus', document.title);
