--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -40,9 +40,9 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">Categoría Capacitación:</label>
+                            <label class="col-sm-5 control-label">Categoria Capacitación:</label>
                             <div class="col-sm-7">
-                                <p class="" th:text="${capacitacion.categoriacapacitacion}">Categoría Capacitación</p>
+                                <p class="" th:text="${capacitacion.categoriacapacitacion}">Descripcion Capacitación</p>
                             </div>
                         </div>
                         <div class="form-group">
