--- a/src/main/resources/templates/fragments/incapacidad/incapacidades.html
+++ b/src/main/resources/templates/fragments/incapacidad/incapacidades.html
@@ -22,8 +22,8 @@
                             <th>Numero Formulario ISSS</th>
                             <th>DUI</th>
                             <th>Numero IISSS</th>
-                            <th>Fecha Desde</th>
-                            <th>Fecha Hasta</th>
+                            <th>Inicio Incapacidad</th>
+                            <th>Fin Incapacidad</th>
                             <th>Tipo de Incapacidad</th>
                             <th>Forma Incapacidad</th>
                             <th>Fondo</th>
