--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -125,7 +125,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Correo:</label>
                         <div class="col-sm-6">
-                            <input type="email" class="form-control" size="50" minlength="50" required="true" name="email"/>
+                            <input type="email" class="form-control" size="50" maxlength="50" required="true" name="email"/>
                         </div>
                              <div class="popup col-sm-1"><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('correo')" onmouseout ="javascript:ocultarAyuda('correo')">a</a></b>
