--- a/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
+++ b/src/main/resources/templates/fragments/diagnosticocapacitacion/diagnosticocapacitacionform.html
@@ -42,7 +42,7 @@
                <div class="form-group">  
            <label class="col-sm-5 control-label">Nombre Dirección:</label>
                 <div class="col-sm-5">
-                     <select class="form-control" name="direccion" >
+                     <select class="form-control" th:field="*{direccion}" >
 <!--                                    <option>Recursos Humanos</option>
                                     <option>Finanzzas</option>
                                     <option>Jurisprudencia</option>
@@ -138,7 +138,7 @@
                     </div>
           <div class="form-group">
                         <label class="col-sm-5 control-label">Año de ejecución:</label>
-                        <div class="col-sm-1">
+                        <div class="col-sm-2">
                             <input type="text" class="form-control numeros" size="4" maxlength="4" required="true" placeholder=""  th:field="*{anioejecucion}"/>
                         </div>
                          <div class="popup col-sm-1"><b>
