--- a/src/main/resources/templates/fragments/inasistencia/inasistencias.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistencias.html
@@ -18,8 +18,8 @@
                             <th>Nombre Empleado</th>
                             <th>Motivo Inasistencia</th>
                             <th>Justificación</th>
-                            <th>Fecha Desde</th>
-                            <th>Fecha Hasta</th>
+                            <th>Inicio Inasistencia</th>
+                            <th>Fin Inasistencia</th>
                             <th>Descargar Acuerdo</th>
                             <th></th>
                             <th sec:authorize="hasRole('ROLE_OPERATIVO')"></th>
