--- a/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
@@ -49,13 +49,13 @@
                 </div>
                 
                         <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha Desde:</label>
+                    <label class="col-sm-2 control-label">Inicio Inasistencia:</label>
                     <div class="col-sm-10">
                         <p class="" th:text="${#calendars.format(inasistencia.fechadesdeinasistencia, 'dd/MM/yyyy')}">Fecha Hasta</p>
                     </div>
                 </div>
                          <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha Hasta:</label>
+                    <label class="col-sm-2 control-label">Fin Inasistencia</label>
                     <div class="col-sm-10">
                         <p class="" th:text="${#calendars.format(inasistencia.fechahastainasistencia, 'dd/MM/yyyy')}">Fecha Hasta</p>
                     </div>
