--- a/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
+++ b/src/main/resources/templates/fragments/incapacidad/incapacidadform.html
@@ -46,8 +46,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
     <div class="form-group">
-                        <label class="col-sm-4 control-label">Nombre de Incapacidad:</label>
-                        <div class="col-sm-4">
+                        <label class="col-sm-4 control-label">Nombre de Incapacidad:(*)</label>
+                        <div class="col-sm-6">
                             <input type="text" class="form-control" size="70" maxlength="70" required="true"th:field="*{nombreincapacidad}"/>
                           
                         </div>
@@ -58,7 +58,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-4 control-label">Numero Formulario ISSS:</label>
+                        <label class="col-sm-4 control-label">Numero Formulario ISSS:(*)</label>
                         <div class="col-sm-4">
                             <input type="text" class="form-control" size="12" maxlength="12" required="true"th:field="*{numerofichaisss}"/>
                           
@@ -71,8 +71,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
              
                     <div class="form-group">
-                        <label class="col-sm-4 control-label">Dui:</label>
-                        <div class="col-sm-6">
+                        <label class="col-sm-4 control-label">DUI:(*)</label>
+                        <div class="col-sm-4">
                             <input type="text" class="form-control num_dui"  max="12"  maxlength="12" required="true" th:field="*{dui}"/>
                         </div>
                               <div class="popup col-sm-1"><b>
@@ -83,8 +83,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                         
                           <div class="form-group">
-                        <label class="col-sm-4 control-label">Numero  ISSS:</label>
-                        <div class="col-sm-6">
+                        <label class="col-sm-4 control-label">Numero  ISSS:(*)</label>
+                        <div class="col-sm-4">
                             <input type="text" class="form-control num_dui" max="12"  maxlength="12" required="true" th:field="*{isss}"/>
                              <!--<small class="form-text text-danger" th:if="${#fields.hasErrors('duicapacitador')}" th:errors="*{duicapacitador}"></small>-->
                         </div>
@@ -96,8 +96,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
            
                          <div class="form-group">
-                        <label class="col-sm-4 control-label">Fecha Desde:</label>
-                        <div class="col-sm-3">
+                        <label class="col-sm-4 control-label">Inicio Incapacidad:(*)</label>
+                        <div class="col-sm-4">
                             <input type="text" class="form-control fecha_format " id="fdesde" required="true" th:field="*{fechadesdeincapacidad}"onchange="isDat(this.value,'fdesde');Fechas(this.value,$('#fhasta').val().toString(),'fdesde','fhasta')"/>
                              <!--<small class="form-text text-danger" th:if="${#fields.hasErrors('duicapacitador')}" th:errors="*{duicapacitador}"></small>-->
                         </div>
@@ -110,8 +110,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                         
                           <div class="form-group">
-                        <label class="col-sm-4 control-label">Fecha Hasta:</label>
-                        <div class="col-sm-3">
+                        <label class="col-sm-4 control-label">Fin Incapacidad:(*)</label>
+                        <div class="col-sm-4">
                             <input type="text" class="form-control fecha_format " id="fhasta" required="true" th:field="*{fechahastaincapacidad}"onchange="isDat(this.value,'fhasta');Fechas($('#fdesde').val().toString(),this.value,'fdesde','fhasta')"/>
                              <!--<small class="form-text text-danger" th:if="${#fields.hasErrors('duicapacitador')}" th:errors="*{duicapacitador}"></small>-->
                         </div>
@@ -158,7 +158,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         </div>
                         
                                   <div class="form-group">
-                        <label class="col-sm-4 control-label">Fondo:</label>
+                        <label class="col-sm-4 control-label">Fondo::(*)</label>
                         <div class="col-sm-6">
                             <!--<input type="text" class="form-control "max="200" maxlength="200" required="true" th:field="*{fondoincapacidad}"/>-->
                                       <textarea rows="4" cols="50" class="form-control" size="200" maxlength="200"  required="true" th:field="*{fondoincapacidad}">
@@ -173,7 +173,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                     </div>
                         
                                      <div class="form-group">
-                        <label class="col-sm-4 control-label">Diagnostico:</label>
+                        <label class="col-sm-4 control-label">Diagnostico:(*)</label>
                         <div class="col-sm-6">
                             <!--<input type="text" class="form-control "max="500" maxlength="500" required="true" th:field="*{diagnostico}"/>-->
                                      <textarea rows="6" cols="50" class="form-control" size="500" maxlength="500"  required="true" th:field="*{diagnostico}">
