--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadshow.html
@@ -38,11 +38,10 @@
                         <p class="form-control-static" th:text="${nivelescolaridad.aniosaprobados}">anios aprobados</p>
                     </div>
                 </div>
-                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Estudios Realizados:</label>
+                   <div class="form-group">
+                    <label class="col-sm-2 control-label">Estudios realizados</label>
                     <div class="col-sm-10">
-                        <!-- aqui presenta probremas de parceo en estudios realizados-->
-                   <!--<p class="form-control-static" th:text="${nivelescolaridad.estudiorealizado">estudiorealizado</p>-->
+                        <p class="form-control-static" th:text="${nivelescolaridad.estudiorealizado}">Finalizado</p>
                     </div>
                 </div>
                  <div class="form-group">
