--- a/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/empleadoasistenciacapacitacion/empleadoasistenciacapacitacionform.html
@@ -50,6 +50,7 @@
                     </div>-->
                      <div class="col-md-12">
                         <div class="row" align="center">
+                              <a href="#" th:href="@{/empleadoasistenciacapacitaciones/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
                              <button type="submit" class="btn btn-default" id="btnGuardar">Agregar</button>
                             <button type="reset" class="btn btn-default">Limpiar</button>
                          </div>
