--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionshow.html
@@ -28,7 +28,7 @@
                         </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Costo Por Persona($):</label>
-                            <div class="col-sm-7">
+                            <div class="col-sm-7 right">
                                 <p class="form-control-static" th:text="${costocapacitacion.costopersona}">Costo por persona</p>
                             </div>
                         </div>
@@ -40,7 +40,7 @@
                         </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Costo capacitador($):</label>
-                            <div class="col-sm-7">
+                            <div class="col-sm-7 right">
                                 <p class="form-control-static" th:text="${costocapacitacion.costocapacitador}">Costo Capacitador</p>
                             </div>
                         </div>
