--- a/src/main/resources/templates/fragments/usuario/usuarios.html
+++ b/src/main/resources/templates/fragments/usuario/usuarios.html
@@ -38,8 +38,8 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <tr th:each="usuario : ${usuarios}">
                 <td th:text="${usuario.codigousuario}">Codigo</td>
                 <td th:text="${usuario.nombreusuario}">Usuario</td>
-                <td th:text="${usuario.estadousuario}?'ACTIVO':'INACTIVO'">Estado</td>
-                <td th:text="${usuario.controlcontrasenia=='1'}?'TEMPORAL':'VERIFICADA'">control</td>
+                <td th:text="${usuario.estadousuario}?'Activo':'Inactivo'">Estado</td>
+                <td th:text="${usuario.controlcontrasenia=='1'}?'Temporal':'Verificada'">control</td>
                 <td th:text="${#calendars.format(usuario.fechaingreso, 'dd/MM/yyyy')}">Fecha Desde</td>
                 <td th:text="${#calendars.format(usuario.fechabaja, 'dd/MM/yyyy')}">Fecha de baja</td>
                  
