--- a/src/main/resources/templates/fragments/usuario/usuarioshow.html
+++ b/src/main/resources/templates/fragments/usuario/usuarioshow.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-4 control-label">Nombre Completo:</label>
+                    <label class="col-sm-4 control-label">Nombre y Apellido:</label>
                     <div class="col-sm-8">
                         <p class="form-control-static" th:text="${usuario.nombrecompleto}">Nombre</p>
                     </div>
